fix weird spacing after breadcrumbs in content pages

--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -2,7 +2,7 @@
 
 #heading-breadcrumbs {
 	padding: 20px 0;
-	margin-bottom: 40px;
+	margin-bottom: 2em;
     background: none;
     background-color: var(--primary-accent);
     word-wrap: break-word;
